--- a/toDoList/templates/toDoList/index.html
+++ b/toDoList/templates/toDoList/index.html
@@ -22,6 +22,7 @@
                 <input type="text" name="task_text" required placeholder="Task" class='input-task' />
                 <input type="submit" value="Add"/>
             </form>
+            {% if error_message %}<span style="color:red;font-weight:bold;">{{error_message}}</span>{% endif %}
         </div>
         <div id="bloc-task">
             {% for task in tasks %}
@@ -35,7 +36,7 @@
                         </div>
                     </div>
                     <div class="right">
-                        <a href="" id="delete">
+                        <a href="{% url 'toDoList:deleteTask' task.id %}" id="delete">
                             Delete
                         </a>
                     </div>
