--- a/toDoList/templates/toDoList/task_deleted.html
+++ b/toDoList/templates/toDoList/task_deleted.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>TodoList Application</title>
     {% comment %} <link rel="stylesheet" href="{% static 'toDoList/style.css' %}"> {% endcomment %}
-    <link rel="stylesheet" href="{% static 'toDoList/index.css' %}" >
+    <link rel="stylesheet" href="{% static 'toDoList/task_deleted.css' %}" >
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,26 +17,25 @@
         <h1>To Do List</h1>
         <h3>Task Deleted</h3>
         <div id="bloc-task">
-            {% for task in tasks_deleted %}
-                <div id="task">
-                    <div class="left">
-                        <div id="task_text">
-                            {{task.task_text}}
-                        </div>
-                        <div id="task_date">
-                            {{task.date_creation}}
-                        </div>
-                    </div>
-                    <div class="right">
-                        <a href="{% url 'toDoList:deleteTask' task.id %}" id="delete">
-                            Restore
-                        </a>
-                    </div>
-                </div>
-            {% endfor %}
+            <table>
+                <tr>
+                    <th>Id</th>
+                    <th>Task title</th>
+                    <th>Task creation date</th>
+                    <th>Options</th>
+                </tr>
+                {% for task in tasks_deleted %}
+                <tr>
+                    <td> {{task.id}} </td>
+                    <td> {{task.task_text}} </td>
+                    <td> {{task.date_creation}} </td>
+                    <td><a id="restore" href="">Restore</a></td>
+                </tr>
+                {% endfor %}
+            </table>
         </div>
         {% comment %} <a href="{% url '' %}">Task deleted</a> {% endcomment %}
-        <a href="">Go to home page</a>
+        <a id="goHome" href="{% url 'toDoList:index' %}">Go to home page</a>
     </div>
 </body>
 </html>
