Implementation feature Restore a Task delete

--- a/toDoList/templates/toDoList/task_deleted.html
+++ b/toDoList/templates/toDoList/task_deleted.html
@@ -29,7 +29,7 @@
                     <td> {{task.id}} </td>
                     <td> {{task.task_text}} </td>
                     <td> {{task.date_creation}} </td>
-                    <td><a id="restore" href="">Restore</a></td>
+                    <td><a id="restore" href="{% url 'toDoList:restoreTask' task.id %}">Restore</a></td>
                 </tr>
                 {% endfor %}
             </table>
