Implementation delete All Task

--- a/toDoList/static/toDoList/index.css
+++ b/toDoList/static/toDoList/index.css
@@ -25,6 +25,16 @@ h1{
     /* text-align: center; */
 }
 
+#content #no-task{
+    /* border:solid 1px; */
+    font-weight: bold;
+    color: red;
+    font-size: 20px;
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+}
+
 #content a{
     display: flex;
     justify-content: center;
@@ -41,6 +51,28 @@ h1{
     gap: 10px;
 }
 
+#content #bottom{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap:30px;
+}
+
+#content #bottom #deleteAll{
+    background-color: red;
+    color:white;
+    font-weight: bold;
+    padding:5px;
+    border-radius: 5px;
+}
+#content #bottom #viewTaskDelete{
+    background-color: rgba(21, 21, 132, 0.893);
+    color:white;
+    font-weight: bold;
+    padding:5px;
+    border-radius: 5px;
+}
+
 #content #bloc-task #task{
     border: solid 1px black;
     border-radius: 5px;
@@ -53,6 +85,11 @@ h1{
     align-items: center;
     justify-content: space-between;
 }
+
+#content #bloc-task #task #task_date{
+    font-size:15px;
+}
+
 #content #bloc-task #task .right #delete{
     margin-right: 5px;
     font-weight: bold;
