--- a/toDoList/static/toDoList/task_deleted.css
+++ b/toDoList/static/toDoList/task_deleted.css
@@ -39,8 +39,17 @@ h1{
     padding:5px;
     border-radius: 5px;
 }
+
 #content #bottom #goHome{
     background-color: rgba(21, 21, 132, 0.893);
+    color:white;
+    font-weight: bold;
+    padding:5px;
+    border-radius: 5px;
+}
+
+#content #bottom #restoreAllTask{
+    background-color: rgba(14, 82, 48, 0.893);
     color:white;
     font-weight: bold;
     padding:5px;
@@ -85,7 +94,7 @@ table td{
 table tr td #restore{
     /* text-decoration: underline; */
     border:solid 1px;
-    background-color: rgba(21, 21, 132, 0.893);
+    background-color: rgba(14, 82, 48, 0.893);
     padding: 2px;
     color:white;
 
