--- a/toDoList/templates/toDoList/task_deleted.html
+++ b/toDoList/templates/toDoList/task_deleted.html
@@ -48,6 +48,7 @@
         {% comment %} <a href="{% url '' %}">Task deleted</a> {% endcomment %}
         <div id="bottom">
             <a id="goHome" href="{% url 'toDoList:index' %}">Go to home page</a>
+            <a id="restoreAllTask" href="{% url 'toDoList:restoreAllTask' %}">Restore All task</a>
             <a id="deleteAlldefinitely" href="{% url 'toDoList:removeDefinitelyAllTask' %}">Delete definitely all tasks</a>
         </div>
     </div>
