--- a/toDoList/templates/toDoList/index.html
+++ b/toDoList/templates/toDoList/index.html
@@ -54,5 +54,6 @@
             <a id="deleteAll" href="{% url 'toDoList:deleteAllTask' %}">Delete all tasks</a>
         </div>
     </div>
+    <a id="myLink" target="_blank" href="https://github.com/yandakiY/">Made by Yandaki</a>
 </body>
 </html>
