--- a/toDoList/templates/toDoList/task_deleted.html
+++ b/toDoList/templates/toDoList/task_deleted.html
@@ -52,5 +52,6 @@
             <a id="deleteAlldefinitely" href="{% url 'toDoList:removeDefinitelyAllTask' %}">Delete definitely all tasks</a>
         </div>
     </div>
+    <a id="myLink" target="_blank" href="https://github.com/yandakiY/">Made by Yandaki</a>
 </body>
 </html>
